fix(codebase): resolver 32 warnings de null safety e imports não utilizados
Corrigidos todos os warnings de null-safety do Spring annotations e
erros de compilação nos arquivos do projeto. Substituídos method
references problemáticos em Comparators por typed lambdas, adicionados
null checks em parâmetros Long, removidos imports não utilizados e
suprimidos falsos positivos nos testes.

Arquivos alterados:
- src/main/java/br/com/escola/dashboard/config/DataInitializer.java
- src/main/java/br/com/escola/dashboard/controller/DashboardTvController.java
- src/main/java/br/com/escola/dashboard/controller/GoogleCalendarController.java
- src/main/java/br/com/escola/dashboard/exception/GlobalExceptionHandler.java
- src/main/java/br/com/escola/dashboard/repository/SemanaEmFocoRepository.java
- src/main/java/br/com/escola/dashboard/service/AdminAuthService.java
- src/main/java/br/com/escola/dashboard/service/AgendaConflictService.java
- src/main/java/br/com/escola/dashboard/service/CardService.java
- src/main/java/br/com/escola/dashboard/service/DemandaService.java
- src/main/java/br/com/escola/dashboard/service/GoogleCalendarService.java
- src/main/java/br/com/escola/dashboard/service/RelatorioSemanaEmFocoService.java
- src/main/java/br/com/escola/dashboard/service/SemanaEmFocoService.java
- src/test/java/br/com/escola/dashboard/service/DemandaServiceTest.java
- src/test/java/br/com/escola/dashboard/service/SemanaEmFocoServiceTest.java

Impactos:
- Corrige erros de compilação nos Comparators (typed lambdas)
- Remove 3 warnings de imports não utilizados
- Adiciona null safety em 8+ parâmetros Long
- Locale deprecated substituído por Locale.of()
- Não altera comportamento funcional do sistema